--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -46,6 +46,7 @@
                     <a href="#" class="btn">Hire</a>
                     <a href="#contact"
                     class="btn">Contact</a>
+                    <a href="/images/myresume.pdf" class="btn resume-btn">Resume</a>
                 </div>
         </div>
                 <div class="home-img">
